--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
 
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: GOOS=linux GOARCH=amd64 go build ./cmd/server/main.go
+      run: make compile CI=true
       
     - name: 'Deploy to Azure'
       uses: Azure/functions-action@v1
