--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -23,7 +23,7 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: make compile CI=true
+      run: make compile ENVIRONMENT=production
       
     - name: 'Deploy to Azure'
       uses: Azure/functions-action@v1
