--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -17,7 +17,7 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: make compile CI=true
+      run: make compile ENVIRONMENT=production
       
     - name: Test
-      run: make test CI=true
+      run: make test ENVIRONENT=production
