--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -16,6 +16,24 @@ jobs:
       with:
         go-version: '1.20'
 
+    - name: Verify dependencies
+      run: go mod verify
+
+    - name: Run go vet
+      run: go vet ./...
+
+    - name: Install staticcheck
+      run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
+    - name: Run staticcheck
+      run: staticcheck ./...
+
+    - name: Install golint
+      run: go install golang.org/x/lint/golint@latest
+
+    - name: Run golint
+      run: golint ./...
+
     - name: Build
       run: make compile ENVIRONMENT=production
       
