--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -21,18 +21,21 @@ jobs:
 
     - name: Run go vet
       run: go vet ./...
+      shell: bash
 
     - name: Install staticcheck
       run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
     - name: Run staticcheck
       run: staticcheck ./...
+      shell: bash
 
     - name: Install golint
       run: go install golang.org/x/lint/golint@latest
 
     - name: Run golint
       run: golint ./...
+      shell: bash
 
     - name: Build
       run: make compile ENVIRONMENT=production
