Ignored some lint warnings

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -64,6 +64,11 @@ output:
 issues:
   max-same-issues: 0
   max-issues-per-linter: 0
+  exclude-rules:
+    - linters:
+        - errcheck
+      text: "Error return value of `w.Write` is not checked (errcheck)"
+    
 
 run:
   issues-exit-code: 1
