Added Create Redirect API Endpoint (#5)
* Added basic auth middleware for the API

* Added tests for basic auth

* Added cmd tool to generate password hashes for the basic auth

* Added request metrics for application insights

* Ignored some lint warnings

* Fixed some lint errors

* Cuddling = bad

* Added create_redirect functions

* General cleanup

* Added the create_redirect endpoint

* linter cleanup

* Moved auth error writing to web package

* Moved validation to web package

* Added tests for create redirect

* Linter errors

* Small fixes

* Changed test status assertion

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -64,6 +64,14 @@ output:
 issues:
   max-same-issues: 0
   max-issues-per-linter: 0
+  exclude-rules:
+    - linters:
+        - errcheck
+      text: "Error return value of `w.Write` is not checked"
+    - linters:
+        - wsl
+      text: "declarations should never be cuddled"
+    
 
 run:
   issues-exit-code: 1
